<resources>
    <string name="app_name">Weather App</string>
    <string name="metric">Celsius (°C)</string>
    <string name="pl">Polish</string>
    <string name="eng">English</string>
    <string name="settings">Settings</string>
    <string name="bin">Bin</string>
    <string name="air_quality_index">Air quality index</string>
    <string name="co">CO</string>
    <string name="no">NO</string>
    <string name="no2">NO2</string>
    <string name="o3">O3</string>
    <string name="so2">SO2</string>
    <string name="pm2_5">PM2.5</string>
    <string name="pm10">PM10</string>
    <string name="nh3">NH3</string>
    <string name="use_your_location">USE YOUR LOCATION</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind speed</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="not_metric">Kelvin (K)</string>
    <string name="de">German</string>
    <string name="confirm">Confirm changes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="celsius">°C</string>
    <string name="kelvin">K</string>
    <string name="map">Use map</string>
</resources>