<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
    <variable
        name="viewModel"
        type="com.example.weatherapp.ui.main.MainScreenViewModel" />
</data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    tools:showIn="@layout/fragment_main_screen">

    <TextView
        android:id="@+id/aqi"
        style="@style/air_pollution_aqi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.aqi}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/co"
        style="@style/air_pollution"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@{viewModel.co}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aqi" />

    <TextView
        android:id="@+id/no"
        style="@style/air_pollution"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@{viewModel.no}"
        app:layout_constraintStart_toEndOf="@+id/co"
        app:layout_constraintTop_toBottomOf="@+id/aqi" />

    <TextView
        android:id="@+id/no2"
        style="@style/air_pollution"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@{viewModel.no2}"
        app:layout_constraintEnd_toStartOf="@+id/o3"
        app:layout_constraintTop_toBottomOf="@+id/aqi" />

    <TextView
        android:id="@+id/o3"
        style="@style/air_pollution"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@{viewModel.o3}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aqi" />

    <TextView
        android:id="@+id/textView5"
        style="@style/air_pollution"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@{viewModel.so2}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/co" />

    <TextView
        android:id="@+id/textView6"
        style="@style/air_pollution"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@{viewModel.pm2_5}"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/no" />

    <TextView
        android:id="@+id/textView7"
        style="@style/air_pollution"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@{viewModel.pm10}"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/no2" />

    <TextView
        android:id="@+id/textView8"
        style="@style/air_pollution"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@{viewModel.nh3}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/o3" />

    <TextView
        android:id="@+id/air_quality_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_quality_index"
        app:layout_constraintEnd_toStartOf="@+id/no2"
        app:layout_constraintStart_toEndOf="@+id/no"
        app:layout_constraintTop_toBottomOf="@+id/aqi" />

    <TextView
        android:id="@+id/textView10"
        style="@style/air_pollution_hints"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/co"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/co" />

    <TextView
        android:id="@+id/textView11"
        style="@style/air_pollution_hints"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/no"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/no" />

    <TextView
        android:id="@+id/textView12"
        style="@style/air_pollution_hints"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/no2"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/no2" />

    <TextView
        android:id="@+id/textView13"
        style="@style/air_pollution_hints"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/o3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/o3" />

    <TextView
        android:id="@+id/textView14"
        style="@style/air_pollution_hints"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/so2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView15"
        style="@style/air_pollution_hints"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/pm2_5"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView16"
        style="@style/air_pollution_hints"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/nh3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView17"
        style="@style/air_pollution_hints"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/pm10"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>